--- a/css/style.css
+++ b/css/style.css
@@ -273,6 +273,12 @@ svg {
 }
 /* Testimoni */
 
+.promosigambar {
+  width: 400px;
+  height: 250px;
+  border-radius: 1rem;
+}
+
 /* foot */
 @media only screen and (min-width: 319px) and (max-width: 767px) {
   .logo {
@@ -316,7 +322,17 @@ svg {
     margin-left: 2rem;
   }
   .tigad {
-    width: 325px;
-    height: 240px;
+    width: 225px;
+    height: 150px;
+  }
+  .promosigambar {
+    width: 300px;
+    height: 200px;
+    border-radius: 1rem;
+    margin-bottom: 2rem;
+  }
+  .dalamcarousel {
+    padding-left: 0rem;
+    padding-right: 0rem;
   }
 }
