--- a/css/about.css
+++ b/css/about.css
@@ -227,3 +227,54 @@ body {
     margin-right: 0rem;
   }
 }
+@media only screen and (min-width: 1024px) and (max-width: 1439px) {
+  .promosigambar {
+    width: 350px;
+    height: 225px;
+    border-radius: 1rem;
+  }
+  .dalamcarousel {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+  .card {
+    width: 230px;
+    height: 350px;
+    padding: 0.8em;
+    background: #f5f5f5;
+    position: relative;
+    overflow: visible;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  }
+  .tigad {
+    width: 205px;
+    height: 150px;
+  }
+  .text-body {
+    font-size: 0.7em;
+  }
+  .text-promo {
+    font-size: 0.85em;
+  }
+  .logofoot {
+    width: 100%;
+    height: auto;
+    max-width: 150px;
+    max-height: 150px;
+    margin: 0rem auto 0rem;
+    display: block;
+  }
+  .footketkiri {
+    margin-left: 0rem;
+  }
+  .footketkiri2 {
+    margin-left: 2.5rem;
+  }
+  .footketkiri3 {
+    margin-left: 2.5rem;
+  }
+  .tekskiri {
+    text-align: left;
+    margin-left: 2rem;
+  }
+}
