--- a/css/style.css
+++ b/css/style.css
@@ -297,7 +297,16 @@ svg {
 .tengaheuy {
   text-align: left;
 }
-
+.logo {
+  margin-left: 3rem;
+  margin-right: 2rem;
+}
+.navbar-toggler {
+  border-color: white !important;
+}
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
 /* foot */
 @media only screen and (min-width: 319px) and (max-width: 767px) {
   .logo {
@@ -318,6 +327,10 @@ svg {
   .navigasi {
     padding-left: 0rem;
     padding-right: 0rem;
+  }
+  .logo {
+    margin-left: 0rem;
+    margin-right: 0rem;
   }
   .logofoot {
     width: 100%;
@@ -360,11 +373,12 @@ svg {
     padding-right: 0rem;
   }
   .ahay {
-    margin-top: 5;
+    margin-top: 5rem;
   }
   .tengaheuy {
     text-align: center;
   }
+  
 }
 @media only screen and (min-width: 1024px) and (max-width: 1439px) {
   .promosigambar {
