--- a/css/about.css
+++ b/css/about.css
@@ -181,6 +181,10 @@ body {
   text-align: left;
 }
 /* foot */
+.logo {
+  margin-left: 3rem;
+  margin-right: 2rem;
+}
 .navbar-toggler {
   border-color: white !important;
 }
@@ -193,6 +197,10 @@ body {
     height: auto;
     max-width: 50px;
     max-height: 100px;
+  }
+  .logo {
+    margin-left: 0rem;
+    margin-right: 0rem;
   }
   .judulbesar {
     font-size: 2.5em;
