--- a/css/contact.css
+++ b/css/contact.css
@@ -226,6 +226,10 @@ body {
 .btn-warning {
   background-color: #b29050 !important;
 }
+.logo {
+  margin-left: 3rem;
+  margin-right: 2rem;
+}
 .navbar-toggler {
   border-color: white !important;
 }
@@ -238,6 +242,10 @@ body {
     height: auto;
     max-width: 50px;
     max-height: 100px;
+  }
+  .logo {
+    margin-left: 0rem;
+    margin-right: 0rem;
   }
   .judulbesar {
     font-size: 2.5em;
