--- a/css/blog.css
+++ b/css/blog.css
@@ -226,7 +226,7 @@ body {
   text-align: left;
 }
 .kecil {
-  font-size: 1.7em;
+  font-size: 1.5em;
 }
 .logo {
   margin-left: 3rem;
@@ -237,6 +237,9 @@ body {
 }
 .navbar-toggler-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+.bg-foot {
+  background-color: gray;
 }
 /* foot */
 @media only screen and (min-width: 319px) and (max-width: 767px) {
