--- a/css/about.css
+++ b/css/about.css
@@ -3,7 +3,7 @@
   padding: 0;
   font-family: 'Comfortaa', cursive;
   scrollbar-width: thin;
-  scrollbar-color: blue #b29050;
+  scrollbar-color: rgb(211, 211, 217) #030303;
 }
 
 *::-webkit-scrollbar {
@@ -11,19 +11,178 @@
 }
 
 *::-webkit-scrollbar-track {
-  background: #b29050;
+  /* background: #b29050; */
 }
 
 *::-webkit-scrollbar-thumb {
   background-color: #6f4628;
-  border-radius: 20px;
-  border: 3px solid #b29050;
+  border-radius: 5px;
+  /* border: 3px solid #b29050; */
 }
 
 body {
-  background-color: whitesmoke;
+  /* background-image: url('../img//bg-kulit.png'); */
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  /* min-height: 600px; */
 }
 
+.gambar-jelajah {
+  width: 100%;
+  height: 300px;
+}
+
+/* Button */
+.cta {
+  display: flex;
+  padding: 11px 33px;
+  text-decoration: none;
+  font-family: 'Poppins', sans-serif;
+  font-size: 25px;
+  color: #ffffff;
+  background: #6f4628;
+  transition: 1s;
+  box-shadow: 6px 6px 0 black;
+  transform: skewX(-15deg);
+  border: none;
+  margin: 0 auto;
+  margin-top: 50px;
+}
+
+.cta:focus {
+  outline: none;
+}
+
+.cta:hover {
+  transition: 0.5s;
+  box-shadow: 10px 10px 0 #b28053;
+}
+
+.cta .second {
+  transition: 0.5s;
+  margin-right: 0px;
+}
+
+.cta:hover .second {
+  transition: 0.5s;
+  margin-right: 45px;
+}
+
+.span {
+  transform: skewX(15deg);
+}
+
+.second {
+  width: 20px;
+  margin-left: 30px;
+  position: relative;
+  top: 12%;
+}
+
+.one {
+  transition: 0.4s;
+  transform: translateX(-60%);
+}
+
+.two {
+  transition: 0.5s;
+  transform: translateX(-30%);
+}
+
+.cta:hover .three {
+  animation: color_anim 1s infinite 0.2s;
+}
+
+.cta:hover .one {
+  transform: translateX(0%);
+  animation: color_anim 1s infinite 0.6s;
+}
+
+.cta:hover .two {
+  transform: translateX(0%);
+  animation: color_anim 1s infinite 0.4s;
+}
+
+@keyframes color_anim {
+  0% {
+    fill: #ffffff;
+  }
+
+  50% {
+    fill: #b28053;
+  }
+
+  100% {
+    fill: #ffffff;
+  }
+}
+
+/* end button */
+
+.navbar-toggler:focus {
+  border: 0 !important;
+  box-shadow: none !important;
+}
+
+.navbar-toggler {
+  border: 0 !important;
+}
+
+/* Navbar */
+.BtnAnm {
+  font-size: 17px;
+  background: transparent;
+  border: none;
+  padding: 1em 1.5em;
+  color: black;
+  text-transform: uppercase;
+  position: relative;
+  transition: 0.5s ease;
+}
+
+.BtnAnm::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 2px;
+  width: 0;
+  background-color: #6f4628;
+  transition: 0.5s ease;
+}
+
+.BtnAnm:hover {
+  color: white;
+  transition-delay: 0.5s;
+}
+
+.BtnAnm:hover::before {
+  width: 100%;
+}
+
+.BtnAnm::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 0;
+  width: 100%;
+  background-color: #6f4628;
+  transition: 0.4s ease;
+  z-index: -1;
+}
+
+.BtnAnm:hover::after {
+  height: 100%;
+  transition-delay: 0.4s;
+  color: aliceblue;
+}
+
+.navi {
+  background-color: #f6f8fa;
+}
 .logo {
   width: 35px;
   height: auto;
@@ -40,12 +199,12 @@ body {
 .nav-link,
 .nav-link:visited {
   font-size: 1.2em;
-  color: white;
+  color: black !important;
 }
 
 .nav-link:hover {
   font-size: 1.2em;
-  color: white;
+  color: gray !important;
 }
 
 .nav-link::after {
@@ -61,62 +220,16 @@ body {
   transform: scaleX(1);
 }
 .link-border {
-  font-size: 1.3em;
+  font-size: 1.3em !important;
 }
 
 .btn-outline-primary {
-  border-color: #b29050;
+  border-color: #b29050 !important;
+  color: white !important;
 }
 .btn-outline-primary:hover {
-  background-color: #b29050;
-  color: black;
-}
-
-#tekshaha {
-  color: black;
-}
-#tekshaha1 {
-  color: black;
-}
-#tekshaha2 {
-  color: black;
-}
-#tekshaha3 {
-  color: black;
-}
-#tekshaha4 {
-  color: black;
-}
-#tekshaha10 {
-  color: black;
-}
-
-/* Button Login */
-.btnlog {
-  position: relative;
-  display: inline-block;
-  margin: 5px;
-  padding: 5px 20px;
-  text-align: center;
-  font-size: 18px;
-  letter-spacing: 1px;
-  text-decoration: none;
-  color: whitesmoke;
-  background: transparent;
-  cursor: pointer;
-  transition: ease-out 0.5s;
-  border: 2px solid #b29050;
-  border-radius: 10px;
-  box-shadow: inset 0 0 0 0 #b29050;
-}
-
-.btnlog:hover {
-  color: white;
-  box-shadow: inset 0 -100px 0 0 #b29050;
-}
-
-.btnlog:active {
-  transform: scale(0.9);
+  background-color: #b29050 !important;
+  color: black !important;
 }
 /* End Button Login */
 .margprod {
