--- a/css/contact.css
+++ b/css/contact.css
@@ -28,7 +28,9 @@ body {
   background-size: cover;
   /* min-height: 600px; */
 }
-
+.hehehe-boy {
+  font-size: 0.5em;
+}
 /* Button */
 .cta {
   display: flex;
@@ -446,6 +448,10 @@ body {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 @media only screen and (min-width: 319px) and (max-width: 767px) {
+  .hehehe-boy {
+    font-size: 0.4em;
+    margin-top: 1.5em;
+  }
   .logo {
     width: 100%;
     height: auto;
