--- a/css/about.css
+++ b/css/about.css
@@ -190,7 +190,7 @@ body {
   max-height: 100px;
 }
 .bgnav {
-  background-color: rgb(97, 51, 18, 0.9);
+  background-color: whitesmoke;
 }
 .bgnav1 {
   color: black;
@@ -355,6 +355,10 @@ body {
   .margteng {
     margin-left: 0rem;
     margin-right: 0rem;
+  }
+  .hehehe-boy {
+    font-size: 0.4em;
+    margin-top: 1.5em;
   }
 }
 @media only screen and (min-width: 1024px) and (max-width: 1439px) {
