--- a/css/blog.css
+++ b/css/blog.css
@@ -268,14 +268,14 @@ body {
   width: 100%;
   height: auto;
   max-width: 350px;
-  max-height: 500px;
+  max-height: 450px;
   margin-bottom: 1rem;
 }
 .foto12 {
   width: 100%;
   height: auto;
-  max-width: 275px;
-  max-height: 175px;
+  max-width: 300px;
+  max-height: 200px;
   margin-bottom: 1rem;
 }
 .foto {
@@ -354,6 +354,62 @@ body {
   background-color: gray;
 }
 /* foot */
+.berita {
+  width: 300px;
+  height: 400px;
+  background: white;
+  padding: 0.4em;
+  border-radius: 8px;
+}
+
+.berita-image {
+  background-color: rgb(236, 236, 236);
+  width: 100%;
+  height: 50%;
+  border-radius: 6px 6px 0 0;
+}
+
+.berita-image:hover {
+  transform: scale(0.98);
+}
+
+.category {
+  text-transform: uppercase;
+  font-size: 0.7em;
+  font-weight: 600;
+  color: rgb(63, 121, 230);
+  padding: 10px 7px 0;
+}
+
+.category:hover {
+  cursor: pointer;
+}
+
+.heading {
+  font-weight: 600;
+  color: rgb(88, 87, 87);
+  padding: 7px;
+}
+
+.heading:hover {
+  cursor: pointer;
+}
+
+.pencipta {
+  color: gray;
+  font-weight: 400;
+  font-size: 11px;
+  padding-top: 20px;
+}
+
+.name-berita {
+  font-weight: 600;
+}
+
+.name-berita:hover {
+  cursor: pointer;
+}
+
 @media only screen and (min-width: 319px) and (max-width: 767px) {
   .logo {
     width: 100%;
